...
                            <constraint firstItem="eyd-0g-hu7" firstAttribute="leading" secondItem="AGd-VT-kUW" secondAttribute="leading" id="L25-Vt-Qdv"/>
                            <constraint firstItem="eyd-0g-hu7" firstAttribute="bottom" secondItem="AGd-VT-kUW" secondAttribute="bottom" id="Zj2-dk-8uD"/>
                            <constraint firstItem="eyd-0g-hu7" firstAttribute="top" secondItem="AGd-VT-kUW" secondAttribute="top" id="c1K-fZ-zcO"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="AGd-VT-kUW"/>
                    </view>
                    <navigationItem key="navigationItem" title="News" id="ntd-oK-Tw9"/>
                    <connections>
                        <outlet property="newsTableView" destination="eyd-0g-hu7" id="Oxy-sQ-5eC"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BMd-1V-nLY" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
            <point key="canvasLocation" x="-604" y="-19"/>
        </scene>
        <!--ALL NEWS-->
        <scene sceneID="I2H-kg-1OC">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xlF-OI-uba" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="ALL NEWS" id="SSg-me-xBS"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qp9-ME-G6G">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="313.04347826086956" y="-342.1875"/>
        </scene>
        <!--SOURCES-->
        <scene sceneID="5WS-Cv-LRJ">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hti-kc-gBl" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="SOURCES" id="WyK-VH-aUU"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IED-g1-s0U">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
