...
        if index == 0{
            contentLabel.textColor = .white
        }else{
            contentLabel.textColor = .black
        }
        switch index {
        case 0...1: forwardButton.setTitle("Next", for: .normal)
        case 2: forwardButton.setTitle("Done", for: .normal)
        default: break
        }
    }
    
    @IBAction func nextButton(_ sender: UIButton) {
        switch index {
...
